Big fix: links displaying defualt color blue on iphone 14

--- a/main.css
+++ b/main.css
@@ -543,6 +543,7 @@ button {
   outline: none;
   padding: 0;
   position: relative;
+  color: black;
   text-decoration: none;
   vertical-align: middle;
 }
@@ -612,15 +613,17 @@ button.btn .button-text {
   left: 0;
   right: 0;
   bottom: 0;
+  color: black;
   text-align: left;
   text-transform: uppercase;
   transition: all 0.45s cubic-bezier(0.65, 0, 0.076, 1);
   width: auto;
+  padding-left: 55px;
 }
 
 @media (min-width: 760px) {
   button.btn .button-text {
-    width: 300px;
+    width: auto;
   }
 }
 
@@ -712,6 +715,7 @@ button:hover .button-text {
   margin-bottom: 20px;
   width: auto;
 }
+
 .last-name {
   font-size: 20px;
   letter-spacing: 0.5rem;
@@ -761,16 +765,11 @@ button:hover .button-text {
   font-weight: 900;
   font-size: 1rem;
 }
-@media (min-width: 764px) {
+@media (min-width: 900px) {
   .social-media {
     flex-direction: row;
     gap: 5rem;
   }
-  .social-media-links a {
-    padding-left: 20px;
-  }
-}
-@media (max-width: 764px) {
   .social-media-links a {
     padding-left: 20px;
   }
